the first skeleton part that I did in a class

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Practice Page</title>
 </head>
 <body>
+    <h1>Mukashev Sultanbek Argynovich</h1>
+    <h2>Web technologies frontend</h2>
+    <p>Just a chill guy</p>
+
+    <hr>
+
+    <ol>
+        <li>Gaming</li>
+        <li>Programming</li>
+        <li>Cooking</li>
+    </ol>
+
+    <hr>
+
+    <ul>
+        <li><a href="https://www.youtube.com/">You Tube</a></li>
+        <li><a href="https://store.steampowered.com/?l=russian">Steam</a></li>
+        <li><a href="https://www.w3schools.com/">W3Schools</a></li>
+    </ul>
+
+    <hr>
+
+    <img src="https://upload.wikimedia.org/wikipedia/ru/e/e7/Steve_%28Minecraft%29.png" alt="I am Steve">
     
+    <br>
+    
+    <button>Press Me!</button>
 </body>
 </html>
