A little bit change in headings and paragraph in the start

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- A little bit about me-->
     <h1>Mukashev Sultanbek Argynovich</h1>
     <h2>Web technologies frontend</h2>
-    <p>Just a chill guy. Todays mood 😎😖😤</p>
-
+    <h3>Just a chill guy.</h3>
+    <p>Just a 2 year student from AITU. Todays mood 😎😖😤</p>
     <hr>
 
     <h4>Things that I like</h3>
