--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h3 class="tagline">Just a chill guy 😎</h3>
         <nav id="navbar">
             <ul class="nav-list">
-                <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#hobbies" class="nav-link">Hobbies</a></li>
-                <li class="nav-item"><a href="#sites" class="nav-link">Websites</a></li>
-                <li class="nav-item"><a href="#schedule" class="nav-link">Schedule</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#about">About</a></li>
+                <li class="nav-item"><a href="#hobbies">Hobbies</a></li>
+                <li class="nav-item"><a href="#sites">Websites</a></li>
+                <li class="nav-item"><a href="#schedule">Schedule</a></li>
+                <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
