--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   <div class="container-fluid mt-4">
     <div class="row">
-      <div class="col-lg-9 col-md-8 col-sm-12">
+      <div class="col-lg-9 col-md-8 col-sm-12" id="lol">
         <section id="about" class="mb-4 text-center">
           <h2>About Me</h2>
           <p>My name is Mukashev Sultanbek. This is my responsive portfolio page.</p>
-          <img src="images/Tarkov sq.jpg" alt="Profile" class="img-fluid rounded-circle" style="max-width:180px;">
+          <img src="images/Tarkov sq.jpg" alt="Profile" class="img-fluid rounded-circle">
         </section>
 
         <section id="hobbies" class="mb-4">
