--- a/index.html
+++ b/index.html
@@ -1,149 +1,323 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Portfolio Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Portfolio Page</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-    <a class="navbar-brand fw-bold" href="#">🔥Bonfire LTD</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#hobbies">Hobbies</a></li>
-        <li class="nav-item"><a class="nav-link" href="#sites">Websites</a></li>
-        <li class="nav-item"><a class="nav-link" href="#schedule">Schedule</a></li>
-        <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="container-fluid mt-4">
-    <div class="row">
-      <div class="col-lg-9 col-md-8 col-sm-12" id="lol">
-        <section id="about" class="mb-4 text-center">
-          <h2>About Me</h2>
-          <p>My name is Mukashev Sultanbek. This is my responsive portfolio page.</p>
-          <img src="images/Tarkov sq.jpg" alt="Profile" class="img-fluid rounded-circle">
-        </section>
-
-        <section id="hobbies" class="mb-4">
-          <h2>My Hobbies</h2>
-          <div class="row g-3">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card">
-                <img src="images/vegeta-fireball.gif" class="card-img-top" alt="Gaming">
-                <div class="card-body">
-                  <h5 class="card-title">Gaming</h5>
-                  <p class="card-text">Minecraft, survivals, maps, bedwars.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card">
-                <img src="images/anime.jpg" class="card-img-top" alt="Programming">
-                <div class="card-body">
-                  <h5 class="card-title">Programming</h5>
-                  <p class="card-text">I enjoy creating and sharing projects.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card">
-                <img src="images/Tarkov sq.jpg" class="card-img-top" alt="Military stuff">
-                <div class="card-body">
-                  <h5 class="card-title">Military Stuff</h5>
-                  <p class="card-text">Airsoft, shooters, war films.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section id="sites" class="mb-4">
-          <h2>Favorite Websites</h2>
-          <ul>
-            <li><a href="https://store.steampowered.com">Steam</a></li>
-            <li><a href="https://www.youtube.com">YouTube</a></li>
-            <li><a href="https://github.com">GitHub</a></li>
-          </ul>
-        </section>
-
-        <section id="schedule" class="mb-4">
-          <h2>Weekly Schedule</h2>
-          <table>
-            <tr><th>Day</th><th>Activity</th></tr>
-            <tr><td>Monday</td><td>Study HTML & CSS</td></tr>
-            <tr><td>Tuesday</td><td>Practice Java</td></tr>
-            <tr><td>Wednesday</td><td>Gaming</td></tr>
-            <tr><td>Thursday</td><td>Read books</td></tr>
-            <tr><td>Friday</td><td>Project Work</td></tr>
-          </table>
-        </section>
-
-
-        <section id="gallery" class="mb-4">
-          <h2>Image Gallery</h2>
-          <div class="gallery-container">
-          <div class="row g-3">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_1.jpg" class="img-fluid"><div class="caption">Jotaro Minecraft</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_2.jpg" class="img-fluid"><div class="caption">Aizen MVD</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_3.jpg" class="img-fluid"><div class="caption">Frieren, Berserk fan</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_4.jpg" class="img-fluid"><div class="caption">My beloved UPPG/White Lotus</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_5.jpg" class="img-fluid"><div class="caption">Literally me fr</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_6.jpg" class="img-fluid"><div class="caption">Anton and Danila</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_7.jpg" class="img-fluid"><div class="caption">Me and the boys</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_8.jpg" class="img-fluid"><div class="caption">Berserk</div></div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="gallery-item"><img src="images/gallery_9.jpg" class="img-fluid"><div class="caption">Sasha Simple</div></div>
-            </div>
-          </div>
-          </div>
-        </section>
-</div>
-      <div class="col-lg-3 col-md-4 col-sm-12" id="contact">
-        <aside class="p-3 bg-dark rounded">
-          <h3>Contact Me</h3>
-          <form>
-            <input type="text" placeholder="Name" class="form-control mb-2">
-            <input type="email" placeholder="Email" class="form-control mb-2">
-            <textarea placeholder="Message" class="form-control mb-2"></textarea>
-            <button type="submit" class="btn btn-warning w-100">Send</button>
-          </form>
-        </aside>
+  <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+      <a class="navbar-brand fw-bold" href="#">🔥Bonfire LTD</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#hobbies">Hobbies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sites">Websites</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#schedule">Schedule</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#gallery">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div>
+    </nav>
 
-  <footer class="bg-dark text-center text-white py-3 mt-4">
-    © 2025 Mukashev Sultanbek, BonfireLTD. All rights reserved.
-  </footer>
+    <main class="flex-grow-1">
+      <div class="container-fluid mt-4">
+        <div class="row">
+          <div class="col-lg-9 col-md-8 col-sm-12" id="lol">
+            <section id="about" class="mb-4 text-center">
+              <h2>About Me</h2>
+              <p>
+                My name is Mukashev Sultanbek. This is my responsive portfolio
+                page.
+              </p>
+              <img
+                src="images/Tarkov sq.jpg"
+                alt="Profile"
+                class="img-fluid rounded-circle"
+              />
+            </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
-</body>
+            <section id="hobbies" class="mb-4">
+              <h2>My Hobbies</h2>
+              <div class="row g-3">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="hobby-card">
+                    <img
+                      src="images/vegeta-fireball.gif"
+                      class="hobby-card-img-top"
+                      alt="Gaming"
+                    />
+                    <div class="hobby-card-body">
+                      <h5 class="hobby-card-title">Gaming</h5>
+                      <p class="hobby-card-text">
+                        Minecraft, survivals, maps, bedwars.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="hobby-card">
+                    <img
+                      src="images/anime.jpg"
+                      class="hobby-card-img-top"
+                      alt="Programming"
+                    />
+                    <div class="hobby-card-body">
+                      <h5 class="hobby-card-title">Programming</h5>
+                      <p class="hobby-card-text">
+                        I enjoy creating and sharing projects.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                  <div class="hobby-card">
+                    <img
+                      src="images/Tarkov sq.jpg"
+                      class="hobby-card-img-top"
+                      alt="Military stuff"
+                    />
+                    <div class="hobby-card-body">
+                      <h5 class="hobby-card-title">Military Stuff</h5>
+                      <p class="hobby-card-text">Airsoft, shooters, war films.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section id="sites" class="mb-4">
+              <h2>Favorite Websites</h2>
+              <ul>
+                <li><a href="https://store.steampowered.com">Steam</a></li>
+                <li><a href="https://www.youtube.com">YouTube</a></li>
+                <li><a href="https://github.com">GitHub</a></li>
+              </ul>
+            </section>
+
+            <section id="schedule" class="mb-4">
+              <h2>Weekly Schedule</h2>
+              <table>
+                <tr>
+                  <th>Day</th>
+                  <th>Activity</th>
+                </tr>
+                <tr>
+                  <td>Monday</td>
+                  <td>Study HTML & CSS</td>
+                </tr>
+                <tr>
+                  <td>Tuesday</td>
+                  <td>Practice Java</td>
+                </tr>
+                <tr>
+                  <td>Wednesday</td>
+                  <td>Gaming</td>
+                </tr>
+                <tr>
+                  <td>Thursday</td>
+                  <td>Read books</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td>Project Work</td>
+                </tr>
+              </table>
+            </section>
+
+            <section id="gallery" class="mb-4">
+              <h2>Image Gallery</h2>
+              <div class="gallery-container">
+                <div class="row g-3">
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_1.jpg" class="img-fluid" />
+                      <div class="caption">Jotaro Minecraft</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_2.jpg" class="img-fluid" />
+                      <div class="caption">Aizen MVD</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_3.jpg" class="img-fluid" />
+                      <div class="caption">Frieren, Berserk fan</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_4.jpg" class="img-fluid" />
+                      <div class="caption">My beloved UPPG/White Lotus</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_5.jpg" class="img-fluid" />
+                      <div class="caption">Literally me fr</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_6.jpg" class="img-fluid" />
+                      <div class="caption">Anton and Danila</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_7.jpg" class="img-fluid" />
+                      <div class="caption">Me and the boys</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_8.jpg" class="img-fluid" />
+                      <div class="caption">Berserk</div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="gallery-item">
+                      <img src="images/gallery_9.jpg" class="img-fluid" />
+                      <div class="caption">Sasha Simple</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-12" id="contact">
+            <aside class="p-3 bg-dark rounded">
+              <h3>Contact Me</h3>
+
+              <form id="basicContactForm" action="#" method="post" validate>
+                <div class="mb-3">
+                  <label for="basicName" class="form-label">Name</label>
+                  <input
+                    type="text"
+                    id="basicName"
+                    name="name"
+                    class="form-control"
+                    required
+                    maxlength="50"
+                    placeholder="Dyadya Bogdan"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="basicEmail" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    id="basicEmail"
+                    name="email"
+                    class="form-control"
+                    required
+                    maxlength="50"
+                    placeholder="name@example.com"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="basicMessage" class="form-label">Message</label>
+                  <textarea
+                    id="basicMessage"
+                    name="message"
+                    class="form-control"
+                    required
+                    maxlength="500"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </aside>
+
+            <br />
+
+            <aside class="p-3 bg-dark rounded">
+              <h4>Contact Me</h4>
+              <h4>(Bootstrap Form)</h4>
+              <form id="bootstrapContactForm" novalidate>
+                <div class="mb-3">
+                  <label for="bsName" class="form-label">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="bsName"
+                    name="name"
+                    placeholder="Enter your full name"
+                    required
+                    maxlength="50"
+                  />
+                  <div class="valid-feedback">Looks good!</div>
+                  <div class="invalid-feedback">Name is required.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="bsEmail" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="bsEmail"
+                    name="email"
+                    placeholder="name@example.com"
+                    required
+                    maxlength="50"
+                  />
+                  <div class="valid-feedback">Looks good!</div>
+                  <div class="invalid-feedback">Valid email is required.</div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="bsMessage" class="form-label">Message</label>
+                  <textarea
+                    class="form-control"
+                    id="bsMessage"
+                    name="message"
+                    placeholder="Write your message here"
+                    rows="3"
+                    required
+                    maxlength="500"
+                  ></textarea>
+                  <div class="valid-feedback">Looks good!</div>
+                  <div class="invalid-feedback">Message is required.</div>
+                </div>
+                <button class="btn btn-success" type="submit">Send</button>
+              </form>
+            </aside>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="bg-dark text-center text-white py-3 mt-4">
+      © 2025 Mukashev Sultanbek, BonfireLTD. All rights reserved.
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
